# CDS-homework-2

./: .gitignore  CMakeLists.txt  README.md  build.sh  plotter.py  pyproject.toml
include/complementary/: Graph.hpp  Tree.hpp
include/k2tree/: Makefile  MemoryManager.c  MemoryManager.h  basic.c  basic.h  bitrankw32int.c  bitrankw32int.h  buildtree.c  buildtree.h  compressleaves.c  compressleaves.h  directcodes.c  directcodes.h  hash.c  hash.h  kTree.c  kTree.h
include/sdsl/: pemb.hpp
lib/pkgconfig/: libdivsufsort.pc  libdivsufsort64.pc  sdsl-lite.pc
src/: AdjacencyList.cpp  GraphImp.cpp  adj_list_graph.hpp  build_trees.hpp  common.hpp  int_generator.hpp  k2_tree.hpp  main.cpp  planar_embedding.hpp  testable.hpp  tester.hpp
